--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "astro-expressive-code": "^0.41.3",
     "astro-icon": "^1.1.5",
     "color": "^5.0.0",
+    "sharp": "^0.34",
     "emoji-regex": "^10.4.0",
     "gemoji": "^8.1.0",
     "hast-util-from-html-isomorphic": "^2.0.0",
@@ -38,6 +39,9 @@
     "markdown-it": "^14.1.0",
     "mdast-util-directive": "^3.1.0",
     "mdast-util-to-string": "^4.0.0",
+    "mdast-util-to-markdown": "^2.1.2",
+    "unist-util-visit": "^5.0.0",
+    "mdast-util-find-and-replace": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-github-calendar": "^4.5.9",
